--- a/app/price.module.css
+++ b/app/price.module.css
@@ -1,26 +1,36 @@
-/* price.css */
+/* price.module.css */
 .priceCard {
-    min-height: 250px;
-    padding: 1.5rem;
-    background-color: white;
-    border-radius: 0.375rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.25rem;
-    width: 100%;
-    max-width: 33%;
+  min-height: 300px;
+  padding: 1.5rem;
+  background-color: white;
+  border-radius: 0.375rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
+  width: 100%;
+}
+
+.listStyle {
+  padding-left: 0;
+  list-style-type: disc;
+  list-style-position: inside;
+}
+
+.markerStyle {
+  color: #FBBF24; /* Custom color for list markers */
+  font-size: 1.2rem; /* Adjust the size of list markers */
+}
+
+@media (min-width: 640px) {
+  .priceCard {
+    width: 48%;
   }
-  
-  .listStyle {
-    padding-left: 0;
-    list-style-type: disc;
-    list-style-position: inside;
+}
+
+@media (min-width: 1024px) {
+  .priceCard {
+    width: 30%;
   }
-  
-  .markerStyle {
-    color: #FBBF24; /* Custom color for list markers */
-    font-size: 1.2rem; /* Adjust the size of list markers */
-  }
-  
+}
